# kitten_show

./: .dockerignore  .env.sample  README.md  pyproject.toml
breeds/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py
breeds/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: breeds.json  kittens.json  ratings.json  users.json
kittens/: admin.py  api_views.py  apps.py  filter.py  models.py  permissions.py  serializers.py  urls.py
kittens/migrations/: 0001_initial.py  0002_initial.py
locale/ru/LC_MESSAGES/: django.po
ratings/: admin.py  api_views.py  models.py  serializers.py  urls.py
ratings/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_breeds.py  test_kittens.py  test_ratings.py  test_users.py
users/: admin.py  api_views.py  models.py  serializers.py  urls.py
users/management/commands/: csu.py  load_fixtures.py
users/migrations/: 0001_initial.py
