[tool.poetry]
name = "kitten-show"
version = "0.1.0"
description = ""
authors = ["safyro <vektorn1212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
pillow = "^10.4.0"
django-filter = "^24.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-django = "^4.9.0"
pytest = "^8.3.3"
pytest-factoryboy = "^2.7.0"
black = "^24.8.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
